--- a/configure.ac
+++ b/configure.ac
@@ -13,6 +13,11 @@ AC_PROG_INSTALL
 AC_PROG_AWK
 AC_PROG_GREP
 
+# Allow user-specified CC, default to gcc
+AC_ARG_VAR([CC], [C compiler (default: gcc)])
+test -z "$CC" && CC=gcc
+AC_SUBST([CC])
+
 # Check for C99 and C11 support
 AC_MSG_CHECKING([for C99 support])
 AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[#if __STDC_VERSION__ < 199901L
@@ -28,7 +33,7 @@ AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[#if __STDC_VERSION__ < 201112L
     [AC_MSG_RESULT([yes])],
     [AC_MSG_WARN([C11 not supported, continuing without it.])])
 
-# Checks for libraries.
+# Checks for required libraries.
 AC_CHECK_LIB([ncurses], [initscr], [], [AC_MSG_ERROR([ncurses library not found])])
 AC_CHECK_LIB([readline], [readline], [], [AC_MSG_ERROR([readline library not found])])
 
@@ -65,6 +70,14 @@ fi
 
 AC_SUBST([STATIC_LIBS])
 
+# Allow user-specified LDFLAGS, CFLAGS
+AC_ARG_VAR([LDFLAGS], [Linker flags])
+AC_ARG_VAR([CFLAGS], [Compiler flags])
+
+# Allow user to specify TARGET and BUILD_HOST
+AC_ARG_VAR([TARGET], [Target system])
+AC_ARG_VAR([BUILD_HOST], [Build host system])
+
 # Checks for header files.
 AC_CHECK_HEADERS([stdlib.h string.h ctype.h stdbool.h ncurses.h readline/readline.h readline/history.h])
 
@@ -94,4 +107,4 @@ if test "x$enable_menuconfig" = "xyes"; then
 fi
 
 AC_CONFIG_FILES([Makefile])
-AC_OUTPUT
+AC_OUTPUT_COMMANDS([chmod +x menuconfig.sh])
