--- a/configure.ac
+++ b/configure.ac
@@ -66,6 +66,9 @@ if test "x$enable_static" = "xyes"; then
     else
         AC_MSG_ERROR([Static libc library not found])
     fi
+
+    # Add -static to CFLAGS if --static is specified
+    CFLAGS="$CFLAGS -static"
 fi
 
 AC_SUBST([STATIC_LIBS])
@@ -103,14 +106,8 @@ if test "x$enable_menuconfig" = "xyes"; then
 
     AC_MSG_RESULT([yes])
 
-    # Create menuconfig.sh for interactive configuration
     AC_CONFIG_FILES([menuconfig.sh])
-    AC_OUTPUT_COMMANDS([chmod +x menuconfig.sh])
-
-    # Start the menuconfig if --enable-menuconfig is passed
-    AC_MSG_NOTICE([Starting menuconfig...])
-    ./menuconfig.sh
 fi
 
 AC_CONFIG_FILES([Makefile])
-AC_OUTPUT
+AC_OUTPUT_COMMANDS([chmod +x menuconfig.sh])
